--- a/PaiPaiGO/PaiPaiGO.csproj
+++ b/PaiPaiGO/PaiPaiGO.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NuGet.Common" Version="6.7.0" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="8.4.7" />
   </ItemGroup>
 
 </Project>
