1023 09:00--上週五1020合併版 1.慧荃跟宜紘頁面用教室電腦進不了 2.自己電腦到可以

--- a/PaiPaiGO/PaiPaiGO.csproj
+++ b/PaiPaiGO/PaiPaiGO.csproj
@@ -33,6 +33,7 @@
     <None Include="Views\WS_AdmMissions\WS_misDetail.cshtml" />
     <None Include="Views\WS_AdmMissions\_MissionTable.cshtml" />
     <None Include="Views\WS_Opinions\AdmOpinion.cshtml" />
+    <None Include="Views\YH_CasePages\YH_CasePage.cshtml" />
     <None Include="Views\Yu_Calendar\Index.cshtml" />
     <None Include="Views\Yu_Calendar\Yu_Calendar.cshtml" />
     <None Include="Views\Yu_Calendar\Yu_Star.cshtml" />
