1105 更新完整版 但宜紘功能怪、敏靖跑版= =

--- a/PaiPaiGO/PaiPaiGO.csproj
+++ b/PaiPaiGO/PaiPaiGO.csproj
@@ -37,6 +37,7 @@
     <None Include="Views\WS_Opinions\AdmOpinion.cshtml" />
     <None Include="Views\WS_Opinions\_OpinionWarn.cshtml" />
     <None Include="Views\YH_CasePages\YH_CasePage.cshtml" />
+    <None Include="Views\YH_CasePages\_MissionsPartial.cshtml" />
     <None Include="Views\Yu_Calendar\Index.cshtml" />
     <None Include="Views\Yu_Calendar\Yu_Calendar.cshtml" />
     <None Include="Views\Yu_Calendar\Yu_Report.cshtml" />
